<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/isShow"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FunctionalityActivity"
    android:orientation="vertical">
    <LinearLayout
        android:layout_marginStart="30dp"
        android:layout_marginTop="100dp"
        android:id="@+id/a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:fontFamily="@font/akronim"
            android:textSize="25sp"
            android:textColor="#FF0026"
            android:text="@string/internet_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
   <TextView
       android:fontFamily="@font/akronim"
       android:layout_marginStart="20dp"
       android:textSize="25sp"
       android:textColor="#FF0026"
       android:id="@+id/internet_status"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:id="@+id/b"
        android:layout_below="@id/a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:fontFamily="@font/akronim"
            android:textSize="25sp"
            android:textColor="#FF0026"
            android:text="@string/charging_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    <TextView
        android:fontFamily="@font/akronim"
        android:layout_marginStart="10dp"
        android:textSize="25sp"
        android:textColor="#FF0026"
        android:id="@+id/charging_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</LinearLayout>
    <LinearLayout
        android:layout_marginTop="10dp"
        android:id="@+id/c"
       android:layout_below="@id/b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:fontFamily="@font/akronim"
            android:layout_marginStart="30dp"
            android:textSize="25sp"
            android:textColor="#FF0026"
            android:text="@string/charging_present"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    <TextView
        android:fontFamily="@font/akronim"
        android:layout_marginStart="10dp"
        android:textSize="25sp"
        android:textColor="#FF0026"
        android:id="@+id/charge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</LinearLayout>
    <LinearLayout
        android:layout_marginTop="10dp"
        android:id="@+id/d"
        android:layout_below="@id/c"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:fontFamily="@font/akronim"
            android:layout_marginStart="30dp"
            android:textSize="25sp"
            android:textColor="#FF0026"
            android:text="@string/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    <TextView
        android:fontFamily="@font/akronim"
        android:layout_marginStart="10dp"
        android:textSize="25sp"
        android:textColor="#FF0026"
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_below="@id/d"
        android:id="@+id/e"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:fontFamily="@font/akronim"
            android:layout_marginStart="30dp"
            android:textSize="25sp"
            android:textColor="#FF0026"
            android:text="@string/timestamp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    <TextView
        android:fontFamily="@font/akronim"
        android:layout_marginStart="10dp"
        android:textSize="25sp"
        android:textColor="#FF0026"
        android:id="@+id/time_stamp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton

        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#FB0505"
        android:clickable="true"
        android:onClick="ClickImage"
        app:borderWidth="0dp"
        app:srcCompat="@drawable/baseline_add_24"
        android:focusable="true" />
</RelativeLayout>